Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- Changed testing.py to directly load zope.traversing's ZCML instead of going
  via the Five traversing.zcml BBB shim.

- moved the Zope dependency to version 2.12.0b3dev

- PortalFolder: Modified allowedContentTypes method to check 
  isConstructionAllowed only for allowed types, not for all content types.

- Fixed typo in the acquisition wrapping of the found utility in
  getToolByName.

- Actions: Add a link_target attribute to store a value for the 
  final rendered link tag's "target" attribute
  (https://bugs.launchpad.net/zope-cmf/+bug/376951)

- MemberData tool: Make it easier to override the default 
  MemberData implementation by trying to look up a named 
  factory utility named "MemberData" before falling back on the
  default MemberData class.
  (https://bugs.launchpad.net/zope-cmf/+bug/377208)

- FSPageTemplate: Change the charset/encoding detection to consider 
  charset specifications in the content type, and replace the
  hardcoded Latin-15 fallback with the mechanism used by the 
  Products.PageTemplate code, which can be influenced by setting
  the environment variable "ZPT_PREFERRED_ENCODING"
  (https://bugs.launchpad.net/zope-cmf/+bug/322263)

- Expose the ZMI manage view of the `_components ` object manager as
  a new "Components Folder" tab in the ZMI.

- ActionsTool: The "Action Providers" tab in the ZMI did not render
  actions from the WorkflowTool correctly since those are not 
  "new-style" actions.
  (https://bugs.launchpad.net/zope-cmf/+bug/322300)

- FSPageTemplate: Prevent reading the underlying file without doing 
  anything with the data in some cases.

- FSObject: Ensure that ZCache invalidations only happens if the 
  filesystem modification time differs from the internally stored
  previous modification time.
  (https://bugs.launchpad.net/zope-cmf/+bug/325246)

- TypeInformation: DCWorkflow instances define a method and a guard 